--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,7 @@ body {
 @import 'blocks/btns';
 @import 'blocks/circle';
 @import 'blocks/cards';
+@import 'blocks/card';
 @import 'blocks/countdown';
 @import 'blocks/timer';
 @import 'blocks/media';
