--- a/src/scss/blocks/_media.scss
+++ b/src/scss/blocks/_media.scss
@@ -1,7 +1,134 @@
-@media (max-width: 1200px) {}
+@media (max-width: 1440px) {
+    .circles {
+        &-countdown {
+            right: 106px;
+        }
+    }
+}
 
-@media (max-width: 992px) {}
+@media (max-width: 1200px) {
 
-@media (max-width: 768px) {}
+    .container {
+        max-width: 950px;
+    }
+
+    .circles {
+        &-cards {
+            top: -325px;
+            right: -290px;
+        }
+        &-countdown {
+            right: -175px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .circle {
+        animation: none;
+    }
+
+    .title {
+        font-size: 53px;
+        line-height: 53px;
+    }
+    .promo{
+        &__text {
+            font-size: 16px;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+
+    .container {
+        max-width: 690px;
+    }
+    .title {
+        font-size: 40px;
+        line-height: 48px;
+    }
+    .btn {
+        &_card {
+            margin-top: 24px;
+        }
+    }
+
+    .circles {
+        &-cards {
+            top: -315px;
+            left: -315px;
+        }
+        &-countdown {
+            right: -625px;
+            top: -330px;
+        }
+    }
+
+    .promo {
+        height: 1196px;
+        padding: 70px 0;
+        &__descr {
+            max-width: 345px;
+        }
+        &__img {
+            max-width: 285px;
+        }
+        &__text {
+            font-size: 18px;
+            line-height: 28px;
+        }
+    }
+
+    .cards {
+        bottom: 488px;
+        width: 690px;
+        &__wrapper {
+            flex-direction: column;
+        }
+    }
+
+    .card {
+        width: 100%;
+        height: 316px;
+        margin-right: 0;
+        margin-bottom: 25px;
+        text-align: left;
+        padding: 48px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        &__price {
+            margin-top: 16px;
+        }
+        &__descr {
+            margin-top: 4px;
+        }
+        &__include {
+            position: absolute;
+            margin: 0;
+            right: 110px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+
+
+    .countdown {
+        height: 986px;
+        padding: 610px 0 100px;
+        &__wrapper {
+            flex-direction: column;
+        }
+    }
+    .timer {
+        &__deadline {
+            text-align: center;
+        }
+
+    }
+}
+
+@media (max-width: 767px) {}
 
 @media (max-width: 576px) {}
