--- a/src/scss/blocks/_timer.scss
+++ b/src/scss/blocks/_timer.scss
@@ -16,11 +16,11 @@
         }
     }
     &__item {
-        width: 100px;
         height: 128px;
         background: var(--dark);
         border-radius: 13px;
         margin-right: 16px;
+        padding: 16px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,7 +36,7 @@
             font-style: normal;
             font-weight: 700;
             font-size: 56px;
-            line-height: 48px;
+            line-height: 56px;
             color: #FFFFFF;
             margin-bottom: 3px;
         }
